update bootstrap process
Signed-off-by: Noel Colon <ncolon@us.ibm.com>

--- a/playbook/tasks/github/30_install_gitops_operator.yaml
+++ b/playbook/tasks/github/30_install_gitops_operator.yaml
@@ -1,4 +1,4 @@
-- name: deploy openshift-operator
+- name: deploy openshift-gitops operator
   community.kubernetes.k8s:
     state: present
     src: "{{ item }}"
