move chmod +x ./scripts/*.sh to ansible playbook
Signed-off-by: Noel Colon <ncolon@us.ibm.com>

--- a/playbook/tasks/github/41_gitops_infrastructure.yaml
+++ b/playbook/tasks/github/41_gitops_infrastructure.yaml
@@ -1,6 +1,7 @@
 - name: update infrastructure items
   shell:
     cmd: |
+      chmod +x ./scripts/*.sh
       source ./scripts/infra-mod.sh 
     chdir: "{{ playbook_workspace }}/repositories/gitops-0-bootstrap"
 
